--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <article>
-        <div>
+        <!-- <div>
           <h4 class="city__temperature">27o C</h4>
           <h3 class="country__name">Iran</h3>
           <h4 class="city__name">
@@ -47,7 +47,7 @@
         </div>
         <div class="sky__img">
           <img src="images/mobile.jpg" />
-        </div>
+        </div> -->
       </article>
     </main>
   </body>
