add new features

--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
         <button class="btn__search">Search</button>
       </div>
 
-      <article>
-        <!-- <div>
+      <img
+        class="img__dinosaur"
+        src="images/Screenshot (9).png"
+        alt="offline dinosaur"
+      />
+
+      <!-- <article> -->
+      <!-- <div>
           <h4 class="city__temperature">27o C</h4>
           <h3 class="country__name">Iran</h3>
           <h4 class="city__name">
@@ -48,7 +54,16 @@
         <div class="sky__img">
           <img src="images/mobile.jpg" />
         </div> -->
-      </article>
+      <!-- </article> -->
     </main>
+    <!-- <div class="offline__mode">
+      <h1>No internet</h1>
+      <h4>Try</h4>
+      <ul>
+        <li>Checking the network cables, modem, and router</li>
+        <li>Reconnecting to Wi-Fi</li>
+        <li>Running Windows Network Diagnostics</li>
+      </ul>
+    </div> -->
   </body>
 </html>
