--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
+    <script type="module" defer src="script.js"></script>
   </head>
 
   <body>
