--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
-    <script type="module" defer src="script.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
+    <script type="module" defer src="src/script.js"></script>
   </head>
 
   <body>
