--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather app</title>
     <link
-      href="favicon/favicon-32x32.png"
+      href="/src/img/favicon-32x32.png"
       sizes="32x32"
       rel="icon"
       type="image/png"
@@ -18,8 +18,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="src/style.css" />
-    <script type="module" defer src="src/script.js"></script>
+    <link rel="stylesheet" href="src/css/style.css" />
+    <script type="module" src="src/js/script.js"></script>
   </head>
 
   <body>
