--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
 
     <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/queries.css" />
     <script type="module" src="src/js/script.js"></script>
   </head>
 
